--- a/README
+++ b/README
@@ -1,48 +1,42 @@
-this project is only used to crawl bbs.byr.cn data.
-according to authentication mechanism and data stream, i simplify the crawler flow.
-make crawler is easier, smaller and fast.
+this project is used to crawl bbs.byr.cn data.
 
 only 3 steps needed:
-1: create mysql db, tables information show bellow
+1: create mysql db
 
-table sect is used to store each section on the lefp panel
-+-------+------------------+------+-----+---------+----------------+
-| Field | Type             | Null | Key | Default | Extra          |
-+-------+------------------+------+-----+---------+----------------+
-| id    | int(10) unsigned | NO   | PRI | NULL    | auto_increment |
-| url   | varchar(60)      | NO   | UNI | NULL    |                |
-| name  | varchar(50)      | NO   |     | NULL    |                |
-+-------+------------------+------+-----+---------+----------------+
+CREATE TABLE `section` (
+  `id` int(10) unsigned NOT NULL AUTO_INCREMENT,
+  `section_url` varchar(60) NOT NULL,
+  `section_name` varchar(50) NOT NULL,
+  `section_article_total` int(7) NOT NULL,
+  `top_section_name` varchar(50) NOT NULL,
+  `top_section_num` int(2) NOT NULL DEFAULT '0',
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8;
 
-table auart is used to store each article description
-+--------+---------------------+------+-----+-------------------+----------------+
-| Field  | Type                | Null | Key | Default           | Extra          |
-+--------+---------------------+------+-----+-------------------+----------------+
-| id     | bigint(20) unsigned | NO   | PRI | NULL              | auto_increment |
-| uptime | date                | YES  |     | 2016-05-19        |                |
-| hot    | int(10) unsigned    | NO   |     | 0                 |                |
-| author | varchar(50)         | NO   | MUL | NULL              |                |
-| title  | varchar(100)        | NO   |     | NULL              |                |
-| url    | varchar(80)         | NO   | UNI | http://bbs.byr.cn |                |
-+--------+---------------------+------+-----+-------------------+----------------+
+create TABLE `articleinfo` (                       
+  `id` bigint(20) unsigned NOT NULL AUTO_INCREMENT,   
+  `section_name` varchar(50) NOT NULL,
+  `article_title` varchar(80) NOT NULL,   
+  `article_url` varchar(80) NOT NULL,
+  `article_createtime` date NOT NULL,
+  `article_comment` int(10) unsigned NOT NULL DEFAULT '0',
+  `article_author` varchar(50),                                            
+  PRIMARY KEY (`id`)                                                           
+) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8;
 
-table art is used to store each artile detail content
-+-------+---------------------+------+-----+---------+----------------+
-| Field | Type                | Null | Key | Default | Extra          |
-+-------+---------------------+------+-----+---------+----------------+
-| id    | bigint(20) unsigned | NO   | PRI | NULL    | auto_increment |
-| url   | varchar(80)         | NO   | UNI | NULL    |                |
-| text  | text                | YES  |     | NULL    |                |
-+-------+---------------------+------+-----+---------+----------------+
+CREATE TABLE `articlebody` (                       
+  `id` bigint(20) unsigned NOT NULL AUTO_INCREMENT,   
+  `article_url` varchar(80) NOT NULL,
+  `article_content` text, 
+  PRIMARY KEY (`id`)                                                           
+) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8;
+
+
 
 2: crawl bbs section information
-cmd: scrapy crawl bbscat
+cmd: scrapy crawl byr_section
 
 3: crawl bbs content
-cmd: scrapy crawl bbs
+cmd: scrapy crawl byr_article
 
-note:
-my crawl is very fast. all bbs article is about 1.1 millions. i just use 6 hours to finish it.
-machine: aliyun ecs, 1GB Mem, 1 Core CPU, 1MB bandwith
 
-because of auth., please replace your account and passwd. in your own project.
